# RayTracing

./: .gitignore  CMakeLists.txt  README.md  Raytracing.sln
Raytracing/: ClassDiagram3.cd  GlobalFeat.cpp  Raytracing.vcxproj  Raytracing.vcxproj.filters  imgui.ini  main.cpp  main_RT.cpp  main_Test.cpp  main_forward.cpp  main_phong.cpp
Raytracing/Resources/models/: sphere_simple.mtl
Raytracing/Resources/models/cornellbox/: tall.mtl
Raytracing/Resources/shaders/: DebugBVH.frag  DebugBVH.vert  RT.frag  RT.vert  background.frag  cubemap.frag  cubemap.vert  debug.frag  debug_ia.frag  equirectangular_to_cubemap.frag  forward.frag  forward.vert  framebuffers_screen.frag  framebuffers_screen.vert  hdrToLdr.frag  hdrToLdr.vert  hdrToSkyobox.frag  hdrToSkyobox.vert  irradiance_convolution.frag  passToScreen.frag  passToScreen.vert  pbr.frag  pbr.vert  phong.frag  phong.vert  post.frag  screen.vert  shader.frag  shader.vert  skybox.frag  unlit.frag
Raytracing/gl_ref/glad/src/: glad.c
Raytracing/include/: BVH.h  Camera.h  GlobalFeat.h  KDTree.h  Material.h  Mesh.h  Model.h  Octree.h  RenderContext.h  RenderNode.cpp  RenderNode.h  Renderer.h  Scene.h  SceneConfig.h  Shader.h  Triangle.h  Utils.h  resource.h  stb_image.h
Raytracing/include/glad/: glad.h
Raytracing/src/: Mesh.cpp  Model.cpp  PBRTest.cpp  Raytracing.cpp  RenderContext.cpp  Renderer.cpp  Scene.cpp  Utils.cpp  main.cpp  test.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp
include/: Model.h  shader.h
include/glad/: glad.h
src/: glad.c  test1.cpp  test2.cpp
